--- a/pre.html
+++ b/pre.html
@@ -12,15 +12,7 @@
   </head>
 
   <body>
-    <!-- Your content goes here -->
+    {refresh-link}
     <div class="container">
-      <!-- <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Status</th>
-          </tr>
-        </thead>
-        <tbody> -->
       <h1>Einzel-Routen</h1>
       <ul class="list-group">
