--- a/pre.html
+++ b/pre.html
@@ -7,7 +7,7 @@
     <title>Hannoversche Radwege</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <style>
-      img { height: 0.75cm; }
+      img { height: 0.75cm; width: 0.75cm }
     </style>
   </head>
 
