--- a/pre.html
+++ b/pre.html
@@ -7,7 +7,8 @@
     <title>Hannoversche Radwege</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
-      img { height: 0.75cm; width: 0.75cm }
+      img.img-fluid { height: 0.75cm; width: 0.75cm }
+      img.symbol { height: 0.5cm; width: 0.5cm }
     </style>
   </head>
 
