Über-Routen-Symbole

--- a/pre.html
+++ b/pre.html
@@ -9,6 +9,7 @@
     <style>
       img.img-fluid { height: 0.75cm; width: 0.75cm }
       img.symbol { height: 0.5cm; width: 0.5cm }
+      H1 img.symbol { height: 1em; width: 1em; margin-left: 0.5em; }
     </style>
   </head>
 
