--- a/pre.html
+++ b/pre.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
       img.img-fluid { height: 0.75cm; width: 0.75cm }
-      img.symbol { height: 0.5cm; width: 0.5cm }
-      H1 img.symbol { height: 1em; width: 1em; margin-left: 0.5em; }
+      img.symbol { height: 0.5cm }
+      H1 img.symbol { height: 1em; margin-left: 0.5em }
     </style>
   </head>
 
